--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -20,8 +20,8 @@
   %header#header.header{"js-controller" => "header"}
     .header__menutrigger
       .header__menutrigger__image{"js-menu-trigger" => ""}
-        %img.header__menutrigger__img.header__menutrigger__img--open{:alt => "Open Menu", :height => "20", :src => "/assets/index/hamburger.svg"}/
-        %img.header__menutrigger__img.header__menutrigger__img--close{:alt => "Close Menu", :height => "20", :src => "/assets/index/close.svg"}/
+        %img.header__menutrigger__img.header__menutrigger__img--open{:alt => "Abrir menu", :height => "20", :src => asset_path("index/hamburger.svg")}/
+        %img.header__menutrigger__img.header__menutrigger__img--close{:alt => "Cerrar menu", :height => "20", :src => asset_path("/assets/index/close.svg")}/
   .vcard
     .vcard__portrait{:title => "Brum!"}
       %img{:alt => "Jorge Parrilla - Software Developer", :src => asset_path("index/jorge-foto.png")}/
