Nuevo email de contacto

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -31,4 +31,4 @@
       %h3.vcard__twitter
         %a{:href => "https://twitter.com/_jorgepl", :rel => "nofollow", :target => "_blank"} @_jorgepl
       %h3.vcard__email
-        %a{:href => "mailto:isoir.2@gmail.com"} me@jorgepl.com
+        %a{:href => "mailto:isoir.2@gmail.com"} info@jorgepl.com
