--- a/app/views/portfolio/about.html.haml
+++ b/app/views/portfolio/about.html.haml
@@ -99,7 +99,7 @@
             .content-box-icon
               %span.icon-envelope
             .content-box-title.font-inc
-              me@jorgepl.com
+              info@jorgepl.com
         / /CONTENT BOX
   / /CONTACT
   / FOOTER
