--- a/app/assets/stylesheets/index/index.css
+++ b/app/assets/stylesheets/index/index.css
@@ -1371,6 +1371,7 @@ body.loaded .vcard {
 
 .vcard__title,
 .vcard__twitter,
+.vcard__about,
 .vcard__email {
   font-size: 2.22rem;
   line-height: 2.2rem;
