--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -28,7 +28,7 @@
     .vcard__details
       %h1.vcard__name Jorge Parrilla
       %h2.vcard__title Software Developer
-      %h3.vcard__twitter
-        %a{:href => "https://twitter.com/_jorgepl", :rel => "nofollow", :target => "_blank"} @_jorgepl
       %h3.vcard__email
         %a{:href => "mailto:isoir.2@gmail.com"} info@jorgepl.com
+      %h3.vcard__about
+        %a{:href => "/about"} >> Sobre mi
