--- a/app/views/layouts/about.html.haml
+++ b/app/views/layouts/about.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Portfolio | Jorge Parrilla | Software Developer
+    %meta{:name => "viewport", :content=> "width=device-width, initial-scale=1.0"}
     %link{:href => asset_path('favicon.jpg'), :rel => "shortcut icon", :type => "image/jpg"}/
     = stylesheet_link_tag 'about', media: 'all', 'data-turbolinks-track' => false
     = javascript_include_tag 'application'
