Corregida la ruta de las img de proyectos

--- a/app/views/portfolio/projects.html.haml
+++ b/app/views/portfolio/projects.html.haml
@@ -28,7 +28,7 @@
           %li{:class => "work-item #{project_db.lenguaje} webdesign"}
             %a{:href => "#{project_db.url}"}
               .work-image
-                %img{:alt => "", :src => asset_path("assets/proyectos/#{project_db.imagen}")}/
+                %img{:alt => "", :src => asset_path("proyectos/#{project_db.imagen}")}/
               .work-caption
                 %h3.work-title.font-alt= project_db.titulo
                 .work-descr.font-inc
