--- a/app/views/layouts/about.html.haml
+++ b/app/views/layouts/about.html.haml
@@ -37,3 +37,11 @@
     = yield
     %script{:src => "https://unpkg.com/imagesloaded@4.1/imagesloaded.pkgd.js"}
     %script{:src => "https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"}
+  :javascript
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-87350386-1', 'auto');
+    ga('send', 'pageview');
