Github link updated and React added

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -8,6 +8,9 @@
         %li.nav__list__item{"js-menu-item" => ""}
           %a.nav__list__link{:href => "/about", :title => "Sobre mi"}
             Sobre mi
+        %li.nav__list__item{"js-menu-item" => ""}
+          %a.nav__list__link{:href => "/projects", :title => "Proyectos"}
+            Proyectos
       %ul.nav__list.nav__list--secondary
         %li.nav__list__item{"js-menu-item" => ""}
           %a.nav__list__link{:href => "/contacto"} Contacto
@@ -15,7 +18,7 @@
           %a.nav__list__link{:href => "https://twitter.com/_jorgepl/", :rel => "nofollow", :target => "blank"} Twitter
         %hr.nav__list__divider/
         %li.nav__list__item{"js-menu-item" => ""}
-          %a.nav__list__link{:href => "https://github.com/isoir", :rel => "nofollow", :target => "blank"} GitHub
+          %a.nav__list__link{:href => "https://github.com/0x0soir", :rel => "nofollow", :target => "blank"} GitHub
 .page
   %header#header.header{"js-controller" => "header"}
     .header__menutrigger
