--- a/app/views/portfolio/about.html.haml
+++ b/app/views/portfolio/about.html.haml
@@ -1,12 +1,12 @@
 / WRAPPER
 .wrapper
   / HOME
-  %section.module.module-header.bg-dark.bg-dark-50{"data-background"=>asset_path('backgrounds/bg.jpg')}
+  %section.module.module-header.bg-dark.bg-dark-30{"data-background"=>asset_path('backgrounds/bg.jpg')}
     .container
       / MODULE TITLE
       .row
         .col-sm-6.col-sm-offset-3
-          %h1.module-title.font-alt.align-center Bienvenido
+          %h2.module-title.font-alt.align-center Welcome :)
           .module-subtitle.font-inc.align-center
             Aquí podrás encontrar información sobre mis trabajos, certificaciones académicas, experiencia y algún que otro proyecto de mi tiempo libre.
       / /MODULE TITLE
@@ -70,6 +70,9 @@
               %span.font-inc
 
         / /SKILLS
+        / DIVIDER
+      %hr.divider-w
+
   / /ABOUT
   / DIVIDER
   %hr.divider-w/
