JS include problem fixed

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -40,4 +40,4 @@
         %h3.vcard__about
           %a{:href => "/about"} >> Sobre mi
 
-%script{:src => "/assets/index/all.min.js", :type => "text/javascript"}
+=javascript_include_tag "index/all.min"
