--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -13,9 +13,7 @@
             Proyectos
       %ul.nav__list.nav__list--secondary
         %li.nav__list__item{"js-menu-item" => ""}
-          %a.nav__list__link{:href => "/contacto"} Contacto
-        %li.nav__list__item{"js-menu-item" => ""}
-          %a.nav__list__link{:href => "https://twitter.com/_jorgepl/", :rel => "nofollow", :target => "blank"} Twitter
+          %a.nav__list__link{:href => "http://www.linkedin.com/in/jparrilla"} LinkedIn
         %hr.nav__list__divider/
         %li.nav__list__item{"js-menu-item" => ""}
           %a.nav__list__link{:href => "https://github.com/0x0soir", :rel => "nofollow", :target => "blank"} GitHub
@@ -36,8 +34,9 @@
         %h1.vcard__name Jorge Parrilla
         %h2.vcard__title Software Developer
         %h3.vcard__email
-          %a{:href => "mailto:isoir.2@gmail.com"} info@jorgepl.com
+          %a{:href => "mailto:info@jorgepl.com"} info@jorgepl.com
         %h3.vcard__about
-          %a{:href => "/about"} >> Sobre mi
+          %a{:href => "/about"} >> Portfolio
 
 =javascript_include_tag "index/all.min"
+%link{:rel => :stylesheet, :type => :"text/css", :href => "https://fonts.googleapis.com/css?family=Suez+One"}
